# tozo

./: Dockerfile  README.md
backend/: .gitignore  .pdm-python  development.env  pyproject.toml  testing.env
backend/src/backend/: run.py
backend/src/backend/blueprints/: error.py  members.py  sessions.py
backend/src/backend/lib/: email.py
backend/src/backend/migrations/: data.py
backend/src/backend/models/: member.py  todo.py
backend/src/backend/static/css/: main.ec2afee5.css.map
backend/src/backend/static/js/: 14.cf8ce9b1.chunk.js  14.cf8ce9b1.chunk.js.map  718.1c52ad03.chunk.js  718.1c52ad03.chunk.js.map  823.1a87f76e.chunk.js  823.1a87f76e.chunk.js.map  main.97debfae.js  main.97debfae.js.map
backend/src/backend/templates/: email.html  forgotten_password.html  index.html  password_changed.html  welcome.html
backend/tests/: conftest.py  test_config.py  test_rate_limits.py
backend/tests/blueprints/: test_members.py  test_sessions.py  test_todos.py
backend/tests/lib/: test_email.py
backend/tests/models/: test_member.py  test_todo.py
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  Router.tsx  ThemeProvider.tsx  Title.tsx  ToastContext.tsx  models.ts  query.ts  setupTest.ts  utils.tsx
frontend/src/components/: CheckboxField.tsx  DateField.tsx  EmailField.tsx  FormActions.tsx  LazyPasswordWithStrengthField.tsx  PasswordField.tsx  PasswordWithStrengthField.tsx  RequireAuth.tsx  TextField.tsx  Toasts.tsx
frontend/src/pages/: ConfirmEmail.tsx  EditTodo.tsx  ForgottenPassword.tsx  Login.tsx  Register.tsx  ResetPassword.tsx
frontend/src/tests/: app.test.ts
infrastructure/: github.tf  main.tf  secrets.auto.tfvars.vault  terraform.tfstate.vault
